// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BasicLink renders a basic active link 1`] = `
<a
  data-active="true"
  href="/active"
>
  label
</a>
`;

exports[`BasicLink renders a basic link 1`] = `
<a
  href="/not-active"
>
  label
</a>
`;
